--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.10.4",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
