--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.4",
 		"sonner": "^1.4.41",
+		"stripe": "^15.8.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.10.4",
